[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/UI/OverworldMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/main_theme.tres" type="Theme" id=2]

[node name="OverworldMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 411.425
margin_top = 210.0
margin_right = 611.425
margin_bottom = 370.0
theme = ExtResource( 2 )

[node name="SaveButton" type="Button" parent="Panel"]
margin_right = 200.0
margin_bottom = 40.0
theme = ExtResource( 2 )
text = "Save Game"

[node name="LoadButton" type="Button" parent="Panel"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 80.0
theme = ExtResource( 2 )
text = "Load Game"

[node name="ExitButton" type="Button" parent="Panel"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 120.0
theme = ExtResource( 2 )
text = "Exit Game"

[node name="CloseButton" type="Button" parent="Panel"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 160.0
theme = ExtResource( 2 )
text = "Close"

[node name="Save" type="Panel" parent="."]
visible = false
margin_left = 340.663
margin_top = 138.107
margin_right = 690.663
margin_bottom = 158.107
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="Save"]
margin_right = 350.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "Select a slot to save:"
align = 1
valign = 1

[node name="SaveList" type="ItemList" parent="Save"]
margin_top = 22.0
margin_right = 350.0
margin_bottom = 262.0
theme = ExtResource( 2 )

[node name="SaveConfirmation" type="ConfirmationDialog" parent="Save/SaveList"]
margin_left = 50.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 150.0
theme = ExtResource( 2 )
window_title = "Confirmation"
dialog_text = "Do you wish to overwrite this save?"

[node name="Load" type="Panel" parent="."]
visible = false
margin_left = 340.663
margin_top = 138.107
margin_right = 690.663
margin_bottom = 158.107
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="Load"]
margin_left = 0.735107
margin_right = 350.735
margin_bottom = 20.0
text = "Select a saved game to load:"
align = 1
valign = 1

[node name="LoadList" type="ItemList" parent="Load"]
margin_top = 22.0
margin_right = 350.0
margin_bottom = 262.0
theme = ExtResource( 2 )

[node name="LoadConfirmation" type="ConfirmationDialog" parent="Load/LoadList"]
margin_left = 64.1702
margin_top = 81.8337
margin_right = 312.17
margin_bottom = 151.834
theme = ExtResource( 2 )
window_title = "Confirmation"
dialog_text = "Do you wish to load this save?"
[connection signal="pressed" from="Panel/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="item_selected" from="Save/SaveList" to="." method="_on_SaveList_item_selected"]
[connection signal="confirmed" from="Save/SaveList/SaveConfirmation" to="." method="_on_SaveConfirmation_confirmed"]
[connection signal="item_selected" from="Load/LoadList" to="." method="_on_LoadList_item_selected"]
[connection signal="confirmed" from="Load/LoadList/LoadConfirmation" to="." method="_on_LoadConfirmation_confirmed"]
